--- a/face/templates/face/home.html
+++ b/face/templates/face/home.html
@@ -12,4 +12,5 @@
             <button type="submit" class="btn btn-primary btn-lg">Submit</button>
         </div>
     </form>
+    {{ image }}
 {% endblock content %}
