added the actual machine learning part

--- a/face/templates/face/home.html
+++ b/face/templates/face/home.html
@@ -18,5 +18,7 @@
     {% if submitted %}
         <img class="img-responsive" src="{{ upload.image.url }}">
         <h1>{{ upload }}</h1>
+        <img class ="img-responsive" src="/media/ml_pics/{{ ml_magic }}">
+        <h1>new image</h1>
     {% endif %}
 {% endblock content %}
