--- a/face/templates/face/base.html
+++ b/face/templates/face/base.html
@@ -9,61 +9,34 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="{% static 'face/main.css' %}">
 
 
     {% if title %}
-        <title>Face - {{ title }}</title>
+        <title>face - {{ title }}</title>
     {% else %}
-        <title>Face Learn Site</title>
+        <title>face learn</title>
     {% endif %}
 </head>
 <body>
     <!-- nav bar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#">navigation</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
-
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <div class="nav-side-menu">
-        <div class="brand">navigation</div>
-        <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
-
-            <div class="menu-list">
-
-                <ul id="menu-content" class="menu-content collapse out">
-                    <li>
-                      <a href="{% url 'face-home' %}">
-                      <i class="fa fa-dashboard fa-lg"></i> home
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="{% url 'face-home' %}">
-                      <i class="fa fa-user fa-lg"></i> celebrity face compare
-                      </a>
-                    </li>
-
-                     <li>
-                      <a href="{% url 'face-home' %}">
-                      <i class="fa fa-users fa-lg"></i> face compare
-                      </a>
-                    </li>
-
-                    <li>
-                      <a href="{% url 'face-about' %}">
-                      <i class="fa fa-globe fa-lg"></i> about
-                      </a>
-                    </li>
-                </ul>
-         </div>
-    </div>
-
-
+      <div class="collapse navbar-collapse" id="navbarColor02">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'face-home' %}">home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'face-about' %}">about</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <!-- actual content -->
     <main role="main" class="container">
         <div class="row">
@@ -75,7 +48,7 @@
                         </div>
                     {% endfor %}
                 {% endif %}
-                <div class="container">{% block content %} {% endblock %}</div>
+                {% block content %} {% endblock %}
             </div>
         </div>
     </main>
