--- a/face/templates/face/home.html
+++ b/face/templates/face/home.html
@@ -1,25 +1,34 @@
 {% extends "face/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-
-
-    <!---
-    <h2>new face</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">save</button>
-    </form>
-    --->
     <form method="POST" class="uni-form" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="save btn btn-default">upload</button>
+        {{ form.as_p }}
+        <button type="submit" class="save btn-primary">upload</button>
     </form>
 
     {% if submitted %}
-        <img class="img-responsive" src="{{ upload.image.url }}">
-        <h1>{{ upload }}</h1>
-        <img class ="img-responsive" src="/media/train_dir/{{ sim }}">
-        <h1>{{ acc }}</h1>
+        <div class="row" label="card-holder">
+        <div class="col-xl">
+            <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <img class="img-fluid" src="{{ upload.image.url }}">
+                        <h4 class="card-title">{{ upload }}</h4>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+            </div>
+        </div>
+        <div class="col-xl">
+            <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
+                <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <img class="img-fluid" src="/media/train_dir/{{ sim }}">
+                        <h4 class="card-title">Primary card title</h4>
+                        <p class="card-text">{{ acc }}</p>
+                    </div>
+            </div>
+        </div>
+    </div>
     {% endif %}
 {% endblock content %}
