updated about page

--- a/face/templates/face/about.html
+++ b/face/templates/face/about.html
@@ -10,10 +10,15 @@
 </ul>
 <div id="myTabContent" class="tab-content">
   <div class="tab-pane fade show active" id="home">
-    <p></p>
+    <p><h1>friend face finder</h1>
+      <p>welcome to tony's big project. i have been working on this on and off since march. i am really proud of my work
+    and hope you think it's just as cool! if you have any questions feel free to contact me and i will gladly explain/
+        answer any of your questions! check out the links section for additional information.</p>
+      <small class="text-muted">if you upload an image of someone already in the dataset select the checkmark</small>
+    </p>
   </div>
   <div class="tab-pane fade" id="links">
-    <p></p>
+    <p>look at the actual code on my <a href="https://github.com/capitalisMm/facesite">github</a></p>
   </div>
 </div>
 
