--- a/face/templates/face/home.html
+++ b/face/templates/face/home.html
@@ -11,11 +11,12 @@
     <div class="collapse" id="collapseExample">
         <div class="card card-body">
             <ul class="list-group">
-                <li class="list-group-item">blake schubert | christian fritz</li>
-                <li class="list-group-item">kaitlyn hall | nic broderick</li>
-                <li class="list-group-item">nico budde | noah jeffers</li>
-                <li class="list-group-item">sarah martin | spenser verret</li>
-                <li class="list-group-item">tony | will nickel</li>
+                <li class="list-group-item">nic broderick | nick magee</li>
+                <li class="list-group-item">nico budde | sarah martin</li>
+                <li class="list-group-item">christian fritz | will nickel</li>
+                <li class="list-group-item">parker giering | blake schubert</li>
+                <li class="list-group-item">kaitln hall | tony</li>
+                <li class="list-group-item">noah jeffers | spenser verret</li>
             </ul>
         </div>
     </div>
@@ -57,7 +58,7 @@
             <div class="card-body">
                 <img class="img-responsive" src="{{ upload.image.url }}">
                 <h4 class="card-title">{{ upload }}</h4>
-                <p class="card-text">this is the image you chose</p>
+                <p class="card-text">this is the image you picked</p>
             </div>
         </div>
     </div>
